[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "callstack"
version = "0.1.0"
description = "Async-first GSM/LTE modem telephony framework for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "pyserial-asyncio>=0.6",
]

[project.scripts]
callstack = "callstack.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-aiohttp>=1.0",
]
sqlite = [
    "aiosqlite",
]
server = [
    "aiohttp>=3.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["callstack*"]
